OpenSearchServer
http://www.open-search-server.com
-----------------------
CHANGE LOG

All new features and bugs are described here:
http://sourceforge.net/tracker/?group_id=260863

OpenSearchServer 1.3

New features:
- 3466448: Multiple OpenSearchServer instances on one Tomcat server
- 3466447: Adding NumDeletedDocs in Runtime/Index
- 3466445: Upgrade Apache POI to 3.8	
- 3422180: Upgrade to ZK 5.0.9
- 3417863: Upgrade Tomcat to version 6.0.35
- 3421240: JSON response for OpenSearchServer
- 3386107: OpenSearch Standards

OpenSearchServer 1.2.3

New features:
- 3431741: Fault tolerant parser on XML upload
- 3429967: Scheduler task: monitoring upload
- 3419014: Delete by query task in scheduler
- 3396935: Log files viewable in the user interface
- 3393751: XML load sheduler task
- 3393063: Upgrade to SeleniumHQ 2.0.4
- 3393052: Upgrade to NekoHTML 1.9.15
- 3393047: Upgrade to TagSoup 1.2.1
- 3393046: Upgrade to PDFBox 1.6.x
- 3393032: Frameset support
- 3392359: Drupal module for OpenSearchServer
- 3380911: Scheduler informations in home view	
- 3370376: Parser have editable parameters
- 3366055: URLBrowser API
- 3353874: OSS could be a great sitemap generator
- 3356222: Export the search result into csv file
- 3344564: Adding Snippet Field Size and Tag from the API
- 3310490: File Crawler API
- 3310489: Web Crawler API
- 2958005: Upgrade Apache HttpClient library to 4.1.1

Bug fixes:
- 3429305: NullPointerException while index Word document
- 3426912: Authorization error when loading binary with XML Load
- 3419013: Scheduler job end date error
- 3325102: Bug Report	Disabled Robots doesn't work
- 3409814: Error: The document is really a RTF file
- 3408193: Password of the XMLLoad task is not encrypted
- 3406657: File crawler error: unknown protocol: smb
- 3406378: SQLite supports only TRANSACTION_SERIALIZABLE
- 3396778: Word 95 or older format are not indexed	
- 3386593: LimitException when reading Robots.txt	
- 3380949: NPE in Renderer