@@ -9,6 +9,8 @@ http://sourceforge.net/tracker/?group_id=260863
 OpenSearchServer 1.3
 
 New features:
+- 3467459: Phonetic filters
+- 3467437: A filter to extract the domain information
 - 3466448: Multiple OpenSearchServer instances on one Tomcat server
 - 3466447: Adding NumDeletedDocs in Runtime/Index
 - 3466445: Upgrade Apache POI to 3.8	
